--- a/src/App/App.css
+++ b/src/App/App.css
@@ -3,20 +3,30 @@
 }
 
 body {
+	font-family: 'Solway', serif;
 	font-size: 20px;
 	color: #444;
 	text-align: center;
 	line-height: 1.5;
 }
 
+.App {
+	font-family: 'Solway', serif;
+}
+
+h1, h2 {
+	font-family: 'Milonga', cursive;
+}
+
 nav, footer {
 	padding: 1% 0;
 	background-color: #aaa;
+	font-size: 18px;
 }
 
 section {
 	min-height: 60px;
-	padding: 2%;
+	padding: 4%;
 	background-color: #bbb;
 }
   
