nice looking signup and login forms

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -66,6 +66,13 @@ input {
 	padding: 2%;
 }
 
+.formRow {
+	display: flex;
+	justify-content: space-between;
+	margin: 3px auto;
+	max-width: 300px;
+}
+
 .errorMsg {
 	color: orangered;
 }
